--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "PySC2",
-  "version": "3.1.0",
+  "name": "JsSC2",
+  "version": "0.0.0",
   "description": "This package is a JavaScript port of the deepmind/pysc2 Starcraft II environment and library for training agents.",
   "author": "Andrew R Carpenter, Jihan Kim",
   "author_email": "andrewryancarpenter77@gmail.com, jihan1218@gmail.com",
@@ -8,20 +8,20 @@
   "keywords": [
     "Javascript",
     "StarCraft AI",
-    "pysc2",
+    "jssc2",
     "deepmind",
     "Starcraft",
     "machine learning",
     "AI"
   ],
-  "url": "https://github.com/arcman7/pysc2",
-  "main": "pysc2/pysc2.bundle.js",
+  "url": "https://github.com/arcman7/jssc2",
+  "main": "jssc2/jssc2.bundle.js",
   "scripts": {
-    "pysc2_agent": "npm run pysc2.bin.agent:entry_point",
-    "pysc2_play": "npm run pysc2.bin.play:entry_point",
-    "pysc2_replay_info": "npm run pysc2.bin.replay_info:entry_point",
+    "jssc2_agent": "node bin/agent.js",
+    "jssc2_play": "npm run jssc2.bin.play:entry_point",
+    "jssc2_replay_info": "npm run jssc2.bin.replay_info:entry_point",
     "tests": "jest --colors",
-    "build_launch_renderer": "cd pysc2/pysc2/lib && browserify -r ./renderer_human/tensorflow_stub.js:@tensorflow/tfjs -r ./renderer_human/tensorflow_backend_stub.js:@tensorflow/tfjs-node -r s2clientprotocol -r gamejs -r ./pythonUtils.js -r ./numpy.js -r ./named_array.js -r ./static_data.js -r ./stopwatch.js -r ./point.js -r ./colors.js -r ./transform.js -r ./actions.js -r ./features.js -r ./protocol.js -r ./renderer_human.js > ./renderer_human/bundle.js && node renderer_human.test.js"
+    "build_launch_renderer": "cd jssc2/lib && browserify -r ./renderer_human/tensorflow_stub.js:@tensorflow/tfjs -r ./renderer_human/tensorflow_backend_stub.js:@tensorflow/tfjs-node -r s2clientprotocol -r gamejs -r ./pythonUtils.js -r ./numpy.js -r ./named_array.js -r ./static_data.js -r ./stopwatch.js -r ./point.js -r ./colors.js -r ./transform.js -r ./actions.js -r ./features.js -r ./protocol.js -r ./renderer_human.js > ./renderer_human/bundle.js && node renderer_human.test.js"
   },
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.0.20",
