fix package.json file

--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "modulePathIgnorePatterns": [
       ".git",
       "/tests/",
-      "/bin/"
+      "/bin/",
       "renderer_human"
     ]
   }
