add stopwatch_memleak_check to jest ignore

--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
       ".git",
       "/tests/",
       "/bin/",
-      "renderer_human"
+      "renderer_human",
+      "stopwatch_memleak_check"
     ]
   }
 }
